💄 Fix Z-index of Instructions

--- a/src/app/ui/dashboard/dashboard.module.css
+++ b/src/app/ui/dashboard/dashboard.module.css
@@ -79,6 +79,7 @@
   background-color: #4f4f4f;
   padding: 20px;
   border-radius: 20px;
+  z-index: 1;
 }
 
 .inst_bookmark {
@@ -87,4 +88,5 @@
   background-color: var(--tag-mint);
   padding: 20px;
   border-radius: 20px;
+  z-index: 1;
 }
